# VUT-FIT-BIT

./: .gitmodules
IAL/Project-1/: README.md  c201.c  c203.c  c206.c
IAL/Project-2/: README.md  c016.c  c401.c  c402.c
IDS/Project-1/: README.md
IDS/Project-2/: README.md  xcikel00_xhrusk25.sql
IDS/Project-3/: README.md  xcikel00_xhrusk25.sql
IEL/: README.md  proj.aux  proj.dvi  proj.tex
IMP/Lab-1/: README.md  main.c
IMP/Lab-2/: README.md  main.c
IMP/Project/: README.md  README_OG.md
INC/: README.md  fsm.vhd
INP/Project-1/: Makefile  README.md
INP/Project-2/: README.md  cpu.vhd  inp.srp  login.b
IOS/Project-1/: README.md  wedi
IOS/Project-2/: Makefile  README.md  proj2.c  proj2_data.c  proj2_data.h  proj2_generator.c  proj2_generator.h
IPK/Project-1/: README.md  README_OG.md  makefile  project.py
IPK/Project-2/: README.md  TCP_Scanner.cpp  TCP_Scanner.h  ipk-scan.cpp  ipk-scan.h  makefile
IPP/Project-1/: README.md  parse.php
IPP/Project-2/: README.md  interpret.py  readme1.md  readme2.md  test.php
ISA/: CMakeLists.txt  FindPCAP.cmake  README.md  README_OG.md  d6r.cpp  d6r.hpp
ISA/classes/: App.cpp  App.hpp  CMakeLists.txt  Relay.cpp  Relay.hpp  Sniffer.cpp  Sniffer.hpp
ISS/: README.md  moje_reseni.m
ITS/Project-1/: README.md  README_OG.md  catalog.feature  edit.feature
ITS/Project-2/: README.md
ITU/: README.md  package-lock.json  package.json
ITU/public/: index.html
ITU/src/: index.js
ITW/Project-1/: README.md  gulpfile.js  itw1.css  (+3 more)
IUS/: README.md
IZG/: README.md  student_cpu.c  student_pipeline.c  student_shader.c
(+121 files in other folders)
